@@ -1,0 +1,13 @@
+.. c:namespace:: ns_lookup
+
+.. c:var:: int i
+
+.. c:function:: void f(int j)
+
+	- :c:var:`i`
+	- :c:var:`j`
+	- :c:expr:`i`
+	- :c:expr:`j`
+
+- :c:var:`i`
+- :c:expr:`i`
